--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="./style.css">
-    <title>Scrum Board</title>
+    <title>Kanban Board</title>
 </head>
 <body>
+    <div class="Kanban__board-status">
+        
+    </div>
     <div class="kanban">
 
     </div>
